docs/0.14/_sources/api/gammapy.modeling.models.NaimaSpectralModel.rst.txt
NaimaSpectralModel
==================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: NaimaSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~NaimaSpectralModel.parameters
      ~NaimaSpectralModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~NaimaSpectralModel.__call__
      ~NaimaSpectralModel.copy
      ~NaimaSpectralModel.create
      ~NaimaSpectralModel.energy_flux
      ~NaimaSpectralModel.energy_flux_error
      ~NaimaSpectralModel.evaluate
      ~NaimaSpectralModel.evaluate_error
      ~NaimaSpectralModel.from_dict
      ~NaimaSpectralModel.integral
      ~NaimaSpectralModel.integral_error
      ~NaimaSpectralModel.inverse
      ~NaimaSpectralModel.plot
      ~NaimaSpectralModel.plot_error
      ~NaimaSpectralModel.spectral_index
      ~NaimaSpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: parameters
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
