docs/0.17/_sources/api/gammapy.modeling.models.NaimaSpectralModel.rst.txt
NaimaSpectralModel
==================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: NaimaSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~NaimaSpectralModel.covariance
      ~NaimaSpectralModel.default_parameters
      ~NaimaSpectralModel.parameters
      ~NaimaSpectralModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~NaimaSpectralModel.__call__
      ~NaimaSpectralModel.copy
      ~NaimaSpectralModel.create
      ~NaimaSpectralModel.energy_flux
      ~NaimaSpectralModel.evaluate
      ~NaimaSpectralModel.evaluate_error
      ~NaimaSpectralModel.from_dict
      ~NaimaSpectralModel.from_parameters
      ~NaimaSpectralModel.integral
      ~NaimaSpectralModel.inverse
      ~NaimaSpectralModel.plot
      ~NaimaSpectralModel.plot_error
      ~NaimaSpectralModel.spectral_index
      ~NaimaSpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: parameters
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
